fix: align the external link arrow in the middle

--- a/static/css/style-external-links.css
+++ b/static/css/style-external-links.css
@@ -8,4 +8,5 @@ a[href]:not(:where(
 ))::after {
   font-size: var(--step-s1);
   content: " ↗";
+  vertical-align: middle;
 }
